@@ -2,32 +2,29 @@
 <html>
 <head>
   <title>Back Tester</title>
-             
   <meta http-equiv="content-type"
  content="text/html; charset=ISO-8859-1">
 </head>
-  <body>
-   
+<body>
 <h2><u>Back Tester</u></h2>
-  The back tester allows you to create trading rules using indicators to
-buy and sell based on signals the indicators emit. You can then run "what
-if" scenarios and then display the results in detail. Overall, you can use
-the back tetser to test your ideas for profitability. The back tester dialog
-contains several pages of options you use to create and fine tune your trading
-rules. The page options are as follows:<br>
+The back tester allows you to create trading rules using indicators to
+buy and sell based on signals the indicators emit. You can then run
+"what if" scenarios and then display the results in detail. Overall,
+you can use the back tetser to test your ideas for profitability. The
+back tester dialog contains several pages of options you use to create
+and fine tune your trading rules. The page options are as follows:<br>
 <br>
-<a href="backtesterrules.html">Rules - This is where you select the indicators
-to be used.</a><br>
-<a href="backtesterstops.html">Stops - This is where you select the stops
-the rule will use when trading.</a><br>
-<a href="backtestertesting.html">Testing - The finer details that apply to
-a particular test such as margins, account balance etc.</a><br>
-<a href="backtesterreports.html">Reports - This is where the trading summary
-will be found along with each trade detail that apply to the most recent
-test.</a><br>
-<a href="backtestercharts.html">Charts - Here is where you will find two
-charts that apply to the most recent test.<br>
-</a>   
+<a href="backtesterrules.html">Rules - This is where you select the
+indicators to be used.</a><br>
+<a href="backtesterstops.html">Stops - This is where you select the
+stops the rule will use when trading.</a><br>
+<a href="backtestertesting.html">Testing - The finer details that apply
+to a particular test such as margins, account balance etc.</a><br>
+<a href="backtesterreports.html">Reports - This is where the trading
+summary will be found along with each trade detail that apply to the
+most recent test.</a><br>
+<a href="backtestercharts.html"><br>
+</a>
 <h2></h2>
 <br>
 <br>
