@@ -1,28 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-<head>
-  <title>Back Tester Charts</title>
-      
-  <meta http-equiv="content-type"
- content="text/html; charset=ISO-8859-1">
-</head>
-  <body>
- 
-<h2><u>Back Tester Charts</u></h2>
- This is where charts of the test will be found. There are 2 charts. The
-top chart is a plot of the account equity during the life of the test. The
-lower chart is a close plot marked by buy and sell arrows indicating where
-each trade was made.<br>
- <br>
- This is an example of a bad trading rule. Man, I took a bath on this one. 
-Ideally, you want the equity plot to rise steadily showing steady profits 
-being accumulated.<br>
- <br>
- <img src="backtesterchart1.png" alt="" width="768" height="719">
- <br>
- <br>
- <br>
- <br>
- <br>
-</body>
-</html>
