@@ -1,216 +1,166 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-                               
   <meta http-equiv="Content-Type"
  content="text/html; charset=iso-8859-1">
   <title>Qtstalker - Table of Contents</title>
-                                                       
   <meta name="generator"
  content="amaya 6.1, see http://www.w3.org/Amaya/">
 </head>
-  <body>
-               
+<body>
 <h2><u>Qtstalker: Table of Contents</u></h2>
-         
-<h2>      </h2>
-                
+<h2> </h2>
 <h3>Introduction<span
- style="color: rgb(0,0,0); background-color: rgb(250,250,250);"></span></h3>
-               
+ style="color: rgb(0, 0, 0); background-color: rgb(250, 250, 250);"></span></h3>
 <ol>
-          <li><a href="intro.html">What is Qtstalker ?</a><br>
-          </li>
-               
+  <li><a href="intro.html">What is Qtstalker ?</a><br>
+  </li>
 </ol>
-                
 <h3>Installation</h3>
-               
 <ol>
-          <li><a href="install.html">How to install Qtstalker.</a></li>
-               
+  <li><a href="install.html">How to install Qtstalker.</a></li>
 </ol>
-                
 <h3>Getting Started: A quick howto</h3>
-               
 <ol>
-          <li><a href="quick.html">How do I view a chart ?</a></li>
-               
+  <li><a href="quick.html">How do I view a chart ?</a></li>
 </ol>
-                
 <h3>Getting to know Qtstalker</h3>
-               
 <ol>
-          <li><a href="main.html">Main Screen</a></li>
-          <li><a href="title.html">Title Bar</a></li>
-          <li>Menu Bar                                         
+  <li><a href="main.html">Main Screen</a></li>
+  <li><a href="title.html">Title Bar</a></li>
+  <li>Menu Bar
     <ol>
-              <li>File Menu                                             
-                           
+      <li>File Menu       
         <ol>
-                  <li><a href="workwithcharts.html">Work with Charts</a></li>
-                  <li><a href="workwithgroups.html">Work with Groups</a></li>
-                  <li><a href="workwithportfolios.html">Work with Portfolios</a></li>
-                 <li><a href="workwithbacktest.html">Work with Backtest</a><br>
-                 </li>
-                  <li>Exit</li>
-                                                                        
-      
-        </ol>
-              </li>
-              <li>Edit Menu                                             
-                           
-        <ol>
-                  <li><a href="newindicator.html">New Indicator</a></li>
-                  <li><a href="preferences.html">Edit Preferences</a></li>
-                                                                        
-      
-        </ol>
-              </li>
-              <li>View Menu                                             
-                           
-        <ol>
-                  <li><a href="compression.html">Daily Compression</a></li>
-                  <li><a href="compression.html">Weekly Compression</a></li>
-                  <li><a href="compression.html">Monthly Compression</a></li>
-                  <li><a href="charttype.html">Bar</a></li>
-                  <li><a href="charttype.html">Paint Bar</a></li>
-                  <li><a href="charttype.html">Line</a></li>
-                  <li><a href="charttype.html">Candlestick</a></li>
-                  <li><a href="charttype.html">Point and Figure</a></li>
-                  <li><a href="grid.html">Chart Grid</a></li>
-                  <li><a href="grid.html">Scale to Screen</a></li>
-                  <li><a href="nextchart.html">Previous Chart</a></li>
-                  <li><a href="nextchart.html">Next Chart</a></li>
-                                                                        
-      
-        </ol>
-              </li>
-              <li>Plugins Menu                                          
-                             
-        <ol>
-                  <li><a href="installplugins.html">Install New Plugins</a></li>
-                                                                        
-      
-        </ol>
-              </li>
-              <li>Tools Menu                                            
-                            
-        <ol>
-                  <li><a href="datawindow.html">Data Window</a></li>
-                  <li><a href="quotes.html">Quotes</a></li>
-                                                                        
-      
-        </ol>
-              </li>
-                                               
-    </ol>
+          <li><a href="workwithcharts.html">Work with Charts</a></li>
+          <li><a href="workwithgroups.html">Work with Groups</a></li>
+          <li><a href="workwithportfolios.html">Work with Portfolios</a></li>
+          <li><a href="workwithbacktest.html">Work with Backtest</a><br>
           </li>
-          <li><a href="toolbars.html">Toolbars</a></li>
-          <li><a href="mainchart.html">Main Chart Area</a></li>
-          <li><a href="indicatorchart.html">Indicator Area</a></li>
-          <li><a href="statusbar.html">Status Bar</a></li>
-          <li><a href="chartobjects.html">Chart Objects</a></li>
-      <li><a href="backtester.html">Back Tester</a></li>
-               
+          <li>Exit</li>
+        </ol>
+      </li>
+      <li>Edit Menu       
+        <ol>
+          <li><a href="newindicator.html">New Indicator</a></li>
+          <li><a href="preferences.html">Edit Preferences</a></li>
+        </ol>
+      </li>
+      <li>View Menu       
+        <ol>
+          <li><a href="compression.html">Daily Compression</a></li>
+          <li><a href="compression.html">Weekly Compression</a></li>
+          <li><a href="compression.html">Monthly Compression</a></li>
+          <li><a href="charttype.html">Bar</a></li>
+          <li><a href="charttype.html">Paint Bar</a></li>
+          <li><a href="charttype.html">Line</a></li>
+          <li><a href="charttype.html">Candlestick</a></li>
+          <li><a href="charttype.html">Point and Figure</a></li>
+          <li><a href="grid.html">Chart Grid</a></li>
+          <li><a href="grid.html">Scale to Screen</a></li>
+          <li><a href="nextchart.html">Previous Chart</a></li>
+          <li><a href="nextchart.html">Next Chart</a></li>
+        </ol>
+      </li>
+      <li>Plugins Menu       
+        <ol>
+          <li><a href="installplugins.html">Install New Plugins</a></li>
+        </ol>
+      </li>
+      <li>Tools Menu       
+        <ol>
+          <li><a href="datawindow.html">Data Window</a></li>
+          <li><a href="quotes.html">Quotes</a></li>
+        </ol>
+      </li>
+    </ol>
+  </li>
+  <li><a href="toolbars.html">Toolbars</a></li>
+  <li><a href="mainchart.html">Main Chart Area</a></li>
+  <li><a href="indicatorchart.html">Indicator Area</a></li>
+  <li><a href="statusbar.html">Status Bar</a></li>
+  <li><a href="chartobjects.html">Chart Objects</a></li>
+  <li><a href="backtester.html">Back Tester</a></li>
   <ol>
-        <li><a href="backtesterrules.html">Rules</a></li>
-        <li><a href="backtesterstops.html">Stops</a></li>
-        <li><a href="backtestertesting.html">Testing</a></li>
-        <li><a href="backtesterreports.html">Reports</a></li>
-        <li><a href="backtestercharts.html">Charts</a></li>
-               
+    <li><a href="backtesterrules.html">Rules</a></li>
+    <li><a href="backtesterstops.html">Stops</a></li>
+    <li><a href="backtestertesting.html">Testing</a></li>
+    <li><a href="backtesterreports.html">Reports</a></li>
   </ol>
-                   
 </ol>
-                
 <p></p>
-                
 <h3>Quote Plugin Reference</h3>
-               
 <ol>
-          <li><a href="cbot.html">CBOT</a></li>
-   <li><a href="cc.html"><u>CC</u></a><br>
-   </li>
-          <li><a href="cme.html">CME</a></li>
-          <li><a href="cmehistory.html">CMEHistory</a></li>
-          <li><a href="cot.html">COT</a></li>
-          <li><a href="csv.html">CSV</a></li>
-          <li><a href="indexes.html">Index</a></li>
-          <li><a href="nybot.html">NYBOT</a></li>
-          <li><a href="qtstalker.html">Qtstalker</a></li>
-         <li><a href="ratio.html">Ratio</a><br>
-         </li>
-          <li><a href="spread.html">Spread</a></li>
-          <li><a href="yahoo.html">Yahoo</a></li>
-          <li><a href="yahooquote.html">YahooQuote</a></li>
-               
+  <li><a href="cbot.html">CBOT</a></li>
+  <li><a href="cc.html"><u>CC</u></a><br>
+  </li>
+  <li><a href="cme.html">CME</a></li>
+  <li><a href="cmehistory.html">CMEHistory</a></li>
+  <li><a href="cot.html">COT</a></li>
+  <li><a href="csv.html">CSV</a></li>
+  <li><a href="indexes.html">Index</a></li>
+  <li><a href="nybot.html">NYBOT</a></li>
+  <li><a href="qtstalker.html">Qtstalker</a></li>
+  <li><a href="ratio.html">Ratio</a><br>
+  </li>
+  <li><a href="spread.html">Spread</a></li>
+  <li><a href="yahoo.html">Yahoo</a></li>
+  <li><a href="yahooquote.html">YahooQuote</a></li>
 </ol>
-                
 <p></p>
-                
 <h3>Indicator Reference</h3>
-               
 <ol>
-          <li><a href="ad.html">Accumulation Distribution - AD</a></li>
-          <li><a href="atr.html">Average True Range - ATR</a></li>
-          <li><a href="bb.html">Bollinger Bands - BB</a></li>
-          <li><a href="cci.html">Commodity Channel Index - CCI</a></li>
-          <li><a href="dpo.html">Detrended Price Oscillator - DPO</a></li>
-          <li><a href="dmi.html">Directional Movement Index - DMI</a></li>
-          <li><a href="env.html">Envelope - ENV</a></li>
-          <li><a href="hlc.html">High Low Channel - HLC</a></li>
-          <li><a href="ma.html">Moving Average - MA</a></li>
-          <li><a href="macd.html">Moving Average Convergence Divergence - 
-MACD</a></li>
-          <li><a href="maosc.html">Moving Average Oscillator - MAOSC</a></li>
-          <li><a href="mf.html">Money Flow - MF</a></li>
-          <li><a href="mom.html">Momentum - MOM</a></li>
-          <li><a href="ma2.html">Moving Average 2 Plot - MA2</a></li>
-          <li><a href="ma3.html">Moving Average 3 Plot - MA3</a></li>
-          <li><a href="nvi.html">Negative Volume Index - NVI</a></li>
-          <li><a href="obv.html">On Balance Volume - OBV</a></li>
-          <li><a href="oi.html">Open Interest - OI</a></li>
-          <li><a href="pc.html">Percent Change - PC</a></li>
-          <li><a href="per.html">Performance - PER</a></li>
-          <li><a href="pp.html">Pivot Point - PP</a></li>
-          <li><a href="pvi.html">Positive Volume Index - PVI</a></li>
-          <li><a href="pvt.html">Price Volume Trend - PVT</a></li>
-          <li><a href="roc.html">Rate of Change - ROC</a></li>
-          <li><a href="rsi.html">Relative Strength Index - RSI</a></li>
-          <li><a href="sar.html">Parabolic SAR - SAR</a></li>
-          <li><a href="sd.html">Standard Deviation - SD</a></li>
-          <li><a href="stoch.html">Stochastic - STOCH</a></li>
-          <li><a href="stochrsi.html">Stochastic RSI - STOCHRSI</a></li>
-          <li><a href="trix.html">TRIX - TRIX</a></li>
-          <li><a href="uo.html">Ultimate Oscillator - UO</a></li>
-          <li><a href="vol.html">Volume - VOL</a></li>
-          <li><a href="volr.html">Volatility Ratio - VOLR</a></li>
-          <li><a href="wad.html">Williams Accumulation Distribution - WAD</a></li>
-          <li><a href="willr.html">Williams %R - WILLR</a></li>
-               
+  <li><a href="ad.html">Accumulation Distribution - AD</a></li>
+  <li><a href="atr.html">Average True Range - ATR</a></li>
+  <li><a href="bb.html">Bollinger Bands - BB</a></li>
+  <li><a href="cci.html">Commodity Channel Index - CCI</a></li>
+  <li><a href="dpo.html">Detrended Price Oscillator - DPO</a></li>
+  <li><a href="dmi.html">Directional Movement Index - DMI</a></li>
+  <li><a href="env.html">Envelope - ENV</a></li>
+  <li><a href="hlc.html">High Low Channel - HLC</a></li>
+  <li><a href="ma.html">Moving Average - MA</a></li>
+  <li><a href="macd.html">Moving Average Convergence Divergence - MACD</a></li>
+  <li><a href="maosc.html">Moving Average Oscillator - MAOSC</a></li>
+  <li><a href="mf.html">Money Flow - MF</a></li>
+  <li><a href="mom.html">Momentum - MOM</a></li>
+  <li><a href="ma2.html">Moving Average 2 Plot - MA2</a></li>
+  <li><a href="ma3.html">Moving Average 3 Plot - MA3</a></li>
+  <li><a href="nvi.html">Negative Volume Index - NVI</a></li>
+  <li><a href="obv.html">On Balance Volume - OBV</a></li>
+  <li><a href="oi.html">Open Interest - OI</a></li>
+  <li><a href="pc.html">Percent Change - PC</a></li>
+  <li><a href="per.html">Performance - PER</a></li>
+  <li><a href="pp.html">Pivot Point - PP</a></li>
+  <li><a href="pvi.html">Positive Volume Index - PVI</a></li>
+  <li><a href="pvt.html">Price Volume Trend - PVT</a></li>
+  <li><a href="roc.html">Rate of Change - ROC</a></li>
+  <li><a href="rsi.html">Relative Strength Index - RSI</a></li>
+  <li><a href="sar.html">Parabolic SAR - SAR</a></li>
+  <li><a href="sd.html">Standard Deviation - SD</a></li>
+  <li><a href="stoch.html">Stochastic - STOCH</a></li>
+  <li><a href="stochrsi.html">Stochastic RSI - STOCHRSI</a></li>
+  <li><a href="trix.html">TRIX - TRIX</a></li>
+  <li><a href="uo.html">Ultimate Oscillator - UO</a></li>
+  <li><a href="vol.html">Volume - VOL</a></li>
+  <li><a href="volr.html">Volatility Ratio - VOLR</a></li>
+  <li><a href="wad.html">Williams Accumulation Distribution - WAD</a></li>
+  <li><a href="willr.html">Williams %R - WILLR</a></li>
 </ol>
 <br>
 <h3><a href="plugintut.html">Indicator Plugin Howto</a></h3>
-                
 <p></p>
-                
 <h3><a href="faq.html">Frequently Asked Questions</a></h3>
-                
 <p></p>
-                
 <p></p>
-                
 <p></p>
-                
 <p></p>
-        <br>
-       <br>
-      <br>
-     <br>
-    <br>
-   <br>
-  <br>
- <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 </body>
 </html>
